board desktop version updated

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image" href="assets/img/joinlogoBlack.svg">
 
     <link rel="stylesheet" href="legal_notice_style.css">
+    <link rel="stylesheet" href="fonts.css">
     <script src="script.js"></script>
 </head>
 
