--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@
     <title>Join - Board</title>
 
     <script src="script.js"></script>
+    <script src="add_task.js"></script>
 </head>
 
 <body id="body" onload="render('board')">
@@ -217,7 +218,7 @@
                 </div>
                 <button onclick="showAddTask()" class="add-task-btn">Add task<img style="margin-left: 5px; height: 15px; width: 15px;"
                         src="assets/img/plus-icon.svg"> </button>
-                <button class="add-task-btn-mobile"><img src="assets/img/plus-icon.svg"> </button>
+                <button onclick="showAddTask()" class="add-task-btn-mobile"><img src="assets/img/plus-icon.svg"> </button>
             </div>
         </div>
 
