--- a/contacts.html
+++ b/contacts.html
@@ -16,6 +16,7 @@
     <script src="contacts.js"></script>
 
     <script src="script.js"></script>
+    <script src="add_task.js"></script>
 </head>
 
 <body onload="render('contacts'), showContacts()">
