board mobile version updated

--- a/board.html
+++ b/board.html
@@ -29,6 +29,7 @@
         <div id="card-container" class="card-container d-none" onclick="doNotClose(event)">
 
             <img class="close-overlay-btn" src="assets/img/close.svg" onclick="closeCard()">
+            <img class="back-overlay-btn" src="assets/img/backButton.svg" onclick="closeCard()">
             <button class="edit-overlay-btn"><img src="assets/img/pencil.svg" ></button>
 
             <span class="card-category-big sales">Sales</span>
