--- a/legal_notice.html
+++ b/legal_notice.html
@@ -18,8 +18,14 @@
     <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
         <div class="inner-content" id="inner-content">
+            <div class="content-container">
+                <h1 class="main-heading">Legal Notice</h1>
+
+            </div>
+            
         </div>
         <div w3-include-html="assets/templates/help_template.html"></div>
+
     </div>
 
     <div class="content-mobile">
