--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
         <div id="add-contact" class="addedit-contact-display d-none">
             <div class="addedit-contact">
                 <div class="addedit-contact-design">
-                    <div class="white-x" onclick="closeNewContact()"><img src="assets/img/x_white.png"></div>
+                    <div class="white-x hover" onclick="closeNewContact()"><img src="assets/img/x_white.png"></div>
                     <div class="addedit-contact-logo"><img src="assets/img/Join_White.png"></div>
                     <div class="addedit-contact-headline">
                         <h2>Add contact</h2>
@@ -90,7 +90,7 @@
                     <div class="addedit-contact-image"><img src="assets/img/add_contact_img.png"></div>
 
                     <div class="addedit-contact-input-fields">
-                        <form onsubmit="">
+                        <form onsubmit="" style="width: 100%;">
                             <div class="name-field">
                                 <input required type="text" class="form-control" placeholder="Name"
                                     aria-label="First name">
@@ -245,6 +245,7 @@
                 <div id="complete-contact" class="complete-contact d-none">
                     <div class="this-contact">
                         <div class="head">
+                            <div class="arrow-back" onclick="closeSingleContact()"><img src="assets/img/arrow_left_black.png"></div>
                             <div class="headline-contacts">
                                 <h1>Contacts</h1>
                             </div>
