--- a/legal_notice.html
+++ b/legal_notice.html
@@ -19,7 +19,20 @@
         <div w3-include-html="assets/templates/destop_template.html"></div>
         <div class="inner-content" id="inner-content">
             <div class="content-container">
+                <a href="board.html" class="back-overlay-btn"><img src="assets/img/backButton.svg"></a>
+
                 <h1 class="main-heading">Legal Notice</h1>
+                <h3 class="sub-heading">Impressum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia? A fugit laborum nihil, blanditiis consequuntur exercitationem necessitatibus unde culpa tempore dolorem voluptates fugiat, voluptate sequi obcaecati molestias aspernatur qui.
+                Cumque repudiandae quos, sunt voluptas consequatur eveniet voluptates ducimus quod officia molestiae optio dolores ad cupiditate maiores tempore deleniti, facere suscipit nobis dicta repellendus sint voluptatum ab. Nulla, corporis molestias.
+                Ipsa commodi autem aliquid corporis nostrum earum, architecto maxime voluptatem nesciunt neque, id sint odit soluta ut, possimus quasi maiores illo tempore officia expedita cum ad! Asperiores eos amet nihil?
+                </p>
+                <h3 class="sub-heading">Datenschutzerklärung</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolores sequi distinctio, minima eligendi libero officiis veritatis praesentium quod quas explicabo officia et quam sunt non optio mollitia totam vero?
+                Doloribus dicta cumque inventore maiores maxime voluptas aperiam mollitia nam unde molestias animi facilis sunt vero tempora, saepe soluta placeat incidunt delectus perspiciatis nobis, non, fuga hic. Quasi, eius harum.
+                Aliquam voluptatum cum cumque repellendus quo, optio, quos cupiditate dolor, fuga ea quidem totam. Necessitatibus labore sint nesciunt sed consequatur, iure, excepturi in ex aut molestiae, officia quaerat temporibus tenetur.
+                Reiciendis incidunt, quae culpa explicabo quod corporis doloribus suscipit doloremque ex iure, harum autem voluptatem ullam excepturi rem illo, neque eius totam dolore commodi amet vel inventore. Ad, magni quos?
+                Aspernatur animi fuga a non dicta quo, vel hic minima, fugit repellendus quia at itaque, necessitatibus porro laudantium blanditiis maxime provident rem accusantium consequatur voluptates consequuntur commodi! Sit, voluptate quam.</p>
 
             </div>
             
@@ -30,6 +43,24 @@
 
     <div class="content-mobile">
         <div w3-include-html="assets/templates/help_template_mobile.html"></div>
+
+        <div class="content-container">
+            <a href="board.html" class="back-overlay-btn"><img src="assets/img/backButton.svg"></a>
+
+            <h1 class="main-heading">Legal Notice</h1>
+            <h3 class="sub-heading">Impressum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia? A fugit laborum nihil, blanditiis consequuntur exercitationem necessitatibus unde culpa tempore dolorem voluptates fugiat, voluptate sequi obcaecati molestias aspernatur qui.
+            Cumque repudiandae quos, sunt voluptas consequatur eveniet voluptates ducimus quod officia molestiae optio dolores ad cupiditate maiores tempore deleniti, facere suscipit nobis dicta repellendus sint voluptatum ab. Nulla, corporis molestias.
+            Ipsa commodi autem aliquid corporis nostrum earum, architecto maxime voluptatem nesciunt neque, id sint odit soluta ut, possimus quasi maiores illo tempore officia expedita cum ad! Asperiores eos amet nihil?
+            </p>
+            <h3 class="sub-heading">Datenschutzerklärung</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolores sequi distinctio, minima eligendi libero officiis veritatis praesentium quod quas explicabo officia et quam sunt non optio mollitia totam vero?
+            Doloribus dicta cumque inventore maiores maxime voluptas aperiam mollitia nam unde molestias animi facilis sunt vero tempora, saepe soluta placeat incidunt delectus perspiciatis nobis, non, fuga hic. Quasi, eius harum.
+            Aliquam voluptatum cum cumque repellendus quo, optio, quos cupiditate dolor, fuga ea quidem totam. Necessitatibus labore sint nesciunt sed consequatur, iure, excepturi in ex aut molestiae, officia quaerat temporibus tenetur.
+            Reiciendis incidunt, quae culpa explicabo quod corporis doloribus suscipit doloremque ex iure, harum autem voluptatem ullam excepturi rem illo, neque eius totam dolore commodi amet vel inventore. Ad, magni quos?
+            Aspernatur animi fuga a non dicta quo, vel hic minima, fugit repellendus quia at itaque, necessitatibus porro laudantium blanditiis maxime provident rem accusantium consequatur voluptates consequuntur commodi! Sit, voluptate quam.</p>
+
+        </div>
     </div>
 </body>
 
