deleted up files and board mobile updated

--- a/board.html
+++ b/board.html
@@ -253,7 +253,7 @@
 
                 <div class="tasks-main">
 
-                    <div class="task-card">
+                    <div class="task-card" onclick="openCard()">
 
                         <span class="card-category design">Design</span>
 
