--- a/board.html
+++ b/board.html
@@ -224,6 +224,8 @@
 
     <div class="content-mobile">
 
+        <div w3-include-html="assets/templates/help_template_mobile.html"></div>
+
         <span class="small-heading-mobile">Kanban Project Management Tool</span>
 
         <div class="heading-search-add">
