--- a/add_task.html
+++ b/add_task.html
@@ -14,7 +14,7 @@
     <script src="add_task.js"></script>
 </head>
 
-<body onload="render('addtask')">
+<body onload="render('addtask')" id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
 
