--- a/summary.html
+++ b/summary.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
 </head>
 
-<body onload="render('summary')">
+<body onload="render('summary')" id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
 
