--- a/contacts.html
+++ b/contacts.html
@@ -71,8 +71,8 @@
                 </div>
             </div>
 
-            <div id="edit-contact" class="addedit-contact-display d-none" onclick="doNotClose(event)">
-                <div class="addedit-contact">
+            <div id="edit-contact" class="addedit-contact-display d-none">
+                <div class="addedit-contact" onclick="doNotClose(event)">
                     <div class="addedit-contact-design">
                         <div class="white-x hover" onclick="closeEditNewContact()"><img src="assets/img/x_white.png"></div>
                         <div class="addedit-contact-logo"><img src="assets/img/Join_White.png"></div>
