--- a/contacts.html
+++ b/contacts.html
@@ -45,7 +45,7 @@
                         <div class="addedit-contact-image"><img src="assets/img/add_contact_img.png"></div>
 
                         <div class="addedit-contact-input-fields">
-                            <form style="width: 100%;" onsubmit="">
+                            <form style="width: 100%;" onsubmit="hello()">
                                 <div class="name-field">
                                     <input required type="text" class="form-control" placeholder="Name"
                                         aria-label="First name">
@@ -62,7 +62,7 @@
                             <div class="add-contact-buttons">
                                 <div class="button-cancel"><button onclick="closeEditNewContact()">Cancel<img
                                             src="assets/img/X.png"></button></div>
-                                <div class="button-create"><button>Create contakt <img
+                                <div class="button-create"><button>Create contact <img
                                             src="assets/img/hook.png"></button>
                                 </div>
                             </div>
