--- a/contacts.html
+++ b/contacts.html
@@ -96,16 +96,13 @@
                         <div class="addedit-contact-input-fields">
                             <form style="width: 100%" onsubmit="hallo(); return false">
                                 <div class="name-field">
-                                    <input required type="text" class="form-control" placeholder="Name"
-                                        aria-label="First name">
+                                    <input required type="text" class="form-control" placeholder="Name">
                                 </div>
                                 <div class="email-field">
-                                    <input required type="email" class="form-control" placeholder="Email"
-                                        aria-label="First name">
+                                    <input required type="email" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="phone-field">
-                                    <input required type="number" class="form-control" placeholder="Phone"
-                                        aria-label="First name">
+                                    <input required type="number" class="form-control" placeholder="Phone">
                                 </div>
 
                                 <div class="edit-contact-buttons">
