--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <Button class="hover-dark" onclick="openSignUp()">Sign up</Button>
         </div>
         <div id="login" class="login-display">
-            <div class="login-area">
+            <div class="login-area" style="box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);">
                 <div class="headline">
                     <h1>Log in</h1>
                 </div>
@@ -51,10 +51,11 @@
                     <div class="guestLogin-button hover-bright">Guest Log in</div>
                 </div>
             </div>
-            <div class="login-head-mobile">
-                <span class="hover-bright" style="border: none;">Not a Join user?</span>
-                <Button class="hover-dark" onclick="openSignUp()">Sign up</Button>
-            </div>
+            
+        </div>
+        <div class="login-head-mobile">
+            <span class="hover-bright" style="border: none;">Not a Join user?</span>
+            <Button class="hover-dark" onclick="openSignUp()">Sign up</Button>
         </div>
 
         <div id="sign-up" class="signUp-display  d-none">
