plus button fixed board

--- a/board.html
+++ b/board.html
@@ -99,7 +99,7 @@
 
                     <div class="tasks-heading">
                         <h3>To do</h3>
-                        <span class="plus-icon">+</span>
+                        <span class="plus-icon"></span>
                     </div>
 
                     <div class="tasks-main">
@@ -137,7 +137,7 @@
 
                     <div class="tasks-heading">
                         <h3>In progress</h3>
-                        <span class="plus-icon">+</span>
+                        <span class="plus-icon"></span>
                     </div>
 
                     <div class="tasks-main">
@@ -196,7 +196,7 @@
 
                     <div class="tasks-heading">
                         <h3>Feedback</h3>
-                        <span class="plus-icon">+</span>
+                        <span class="plus-icon"></span>
                     </div>
 
                     <div class="tasks-main">
@@ -209,7 +209,7 @@
 
                     <div class="tasks-heading">
                         <h3>Done</h3>
-                        <span class="plus-icon">+</span>
+                        <span class="plus-icon"></span>
                     </div>
 
                     <div class="tasks-main">
@@ -248,7 +248,7 @@
 
                 <div class="tasks-heading">
                     <h3>To do</h3>
-                    <span class="plus-icon">+</span>
+                    <span class="plus-icon"></span>
                 </div>
 
                 <div class="tasks-main">
@@ -321,7 +321,7 @@
 
                 <div class="tasks-heading">
                     <h3>Feedback</h3>
-                    <span class="plus-icon">+</span>
+                    <span class="plus-icon"></span>
                 </div>
 
                 <div class="tasks-main">
@@ -356,7 +356,7 @@
 
                 <div class="tasks-heading">
                     <h3>Done</h3>
-                    <span class="plus-icon">+</span>
+                    <span class="plus-icon"></span>
                 </div>
 
                 <div class="tasks-main">
