--- a/board.html
+++ b/board.html
@@ -284,7 +284,7 @@
 
                 <div class="tasks-heading">
                     <h3>In progress</h3>
-                    <span class="plus-icon">+</span>
+                    <span class="plus-icon"></span>
                 </div>
 
                 <div class="tasks-main">
