legal notice mobile update

--- a/board.html
+++ b/board.html
@@ -41,7 +41,7 @@
 
             <div class="due-date-prio">
                 <span style="font-weight:bold; margin-right: 50px;">Priority:</span>
-                <span><img src="assets/img/urgent-filled.svg" alt=""></span>
+                <span><img class="priority-tag" src="assets/img/urgent-filled.svg" alt=""></span>
             </div>
 
             <div class="assigned">
