--- a/legal_notice.html
+++ b/legal_notice.html
@@ -48,6 +48,8 @@
         <div class="content-container">
             <a href="board.html" class="back-overlay-btn"><img src="assets/img/backButton.svg"></a>
 
+            <span class="small-heading-mobile">Kanban Project Management Tool</span>
+
             <h1 class="main-heading">Legal Notice</h1>
             <h3 class="sub-heading">Impressum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia? A fugit laborum nihil, blanditiis consequuntur exercitationem necessitatibus unde culpa tempore dolorem voluptates fugiat, voluptate sequi obcaecati molestias aspernatur qui.
